--- a/package.json
+++ b/package.json
@@ -37,18 +37,20 @@
   },
   "dependencies": {
     "@angular/animations": "^5.0.1",
+    "@angular/cdk": "^5.0.0-rc0",
     "@angular/common": "~5.0.1",
     "@angular/compiler": "~5.0.1",
     "@angular/core": "~5.0.1",
     "@angular/forms": "~5.0.1",
     "@angular/http": "~5.0.1",
+    "@angular/material": "^5.0.0-rc0",
     "@angular/platform-browser": "~5.0.1",
     "@angular/platform-browser-dynamic": "~5.0.1",
     "@angular/router": "~5.0.1",
     "core-js": "^2.5.1",
     "reflect-metadata": "^0.1.10",
-    "tslib": "^1.8.0",
     "rxjs": "^5.5.2",
+    "tslib": "^1.8.0",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
